Fix spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,7 +10,7 @@ $baseFontFamily: ShareTechMono;
 body {
 	padding-top: 60px;
 	padding-bottom: 60px;
-	margin-bottom: 20px;
+	// margin-bottom: 20px;
 }
 
 @import 'bootstrap-responsive';
